<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".ui.DetailUserActivity">

        <ProgressBar
            android:id="@+id/detailLoading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="50dp"
            android:indeterminate="true"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/ivUserDetail"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginTop="30dp"
            android:src="@drawable/ic_person"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:contentDescription="Profile Picture"/>

        <TextView
            android:id="@+id/tvDetailName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="@+id/ivUserDetail"
            app:layout_constraintStart_toStartOf="@+id/ivUserDetail"
            app:layout_constraintTop_toBottomOf="@+id/ivUserDetail" />

        <TextView
            android:id="@+id/tvUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/name"
            android:textSize="18sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/tvDetailName"
            app:layout_constraintStart_toStartOf="@+id/tvDetailName"
            app:layout_constraintTop_toBottomOf="@+id/tvDetailName" />

        <TextView
            android:id="@+id/tvUserDetailFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/count"
            android:textSize="16sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

        <TextView
            android:id="@+id/labelFollowers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/followers"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvUserDetailFollowers"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/tvUserDetailFollowers"
            app:layout_constraintTop_toTopOf="@+id/tvUserDetailFollowers" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.5" />

        <TextView
            android:id="@+id/tvUserDetailFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:text="@string/count"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.35"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername" />

        <TextView
            android:id="@+id/labelFollowing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/following"
            android:textSize="16sp"
            android:textStyle="italic|bold"
            app:layout_constraintBottom_toBottomOf="@+id/tvUserDetailFollowing"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.1"
            app:layout_constraintStart_toEndOf="@+id/tvUserDetailFollowing"
            app:layout_constraintTop_toTopOf="@+id/tvUserDetailFollowing" />

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tabs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvUsername"
            app:tabGravity="fill"
            app:tabMode="fixed"
            android:contentDescription="Follow Tabs" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/view_pager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tabs" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fabFavorite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:contentDescription="@string/favourite"
            android:foregroundGravity="bottom"
            app:fabSize="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.98"
            app:layout_constraintStart_toStartOf="@+id/view_pager"
            app:srcCompat="@drawable/ic_favorite_border" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>